--- a/src/200.html
+++ b/src/200.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>starter pack</title>
+    <title>Eric's Corner on the Internet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
     <div class="logo"></div>
-    <div id="main">Loading</div>
+    <div id="main">Loading now...</div>
 </body>
 
 </html>
